# Krono

./: .gitignore  CMakeLists.txt  DeferredRendering.sln  LICENSE.md  README.md  ShaderBundler.psess  lineCount.bash
BasicGameEngine/: BasicGameEngine.h  BasicGameEngine.vcxproj  BasicGameEngine.vcxproj.filters  CMakeLists.txt  ReadMe.txt  stdafx.cpp
BasicGameEngine/Font/: Font.cpp  Font.h  FontGenerator.cpp  FontGenerator.h  FontLoader.cpp  FontLoader.h  GDIFontGenerator.cpp  GDIFontGenerator.h
BasicGameEngine/GUI/: Graphics2D.cpp  Graphics2D.h  SpriteBatch2D.cpp  SpriteBatch2D.h  Transform2D.cpp  Transform2D.h
BasicGameEngine/GameObject/: Behavior.cpp  Behavior.h  Camera.cpp  Camera.h  Component.cpp  Component.h  GameObject.cpp  GameObject.h  Lens.cpp  Lens.h  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h
BasicGameEngine/Lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  PositionalLight.cpp  PositionalLight.h
BasicGameEngine/Render/: RenderManager.cpp  RenderManager.h  RenderStage.cpp  RenderStage.h  Renderable.cpp  Renderable.h
BasicGameEngine/Scene/: Game.cpp  Game.h  Scene.cpp  Scene.h  UpdateManager.cpp  UpdateManager.h
BasicGameEngine/Scripting/: LuaBehavior.cpp  LuaBehavior.h  LuaContext.cpp  LuaContext.h  LuaCppConvert.cpp  LuaCppConvert.h  LuaFunctionBase.cpp  LuaFunctionBase.h  LuaFunctionBinding.cpp  LuaFunctionBinding.h  LuaScript.cpp  LuaScript.h  LuaScriptLoader.cpp  LuaScriptLoader.h
BasicGameEngine/Serialization/: ComponentFactory.cpp  ComponentFactory.h  ISerializable.h  JsonSerialization.cpp  JsonSerialization.h  RenderSerialization.cpp  RenderSerialization.h  SceneDeserializer.cpp  SceneDeserializer.h  SceneSerializer.cpp  SceneSerializer.h
DeferredRendering/: CMakeLists.txt  DeferredRendering.cpp  DeferredRendering.vcxproj  DeferredRendering.vcxproj.filters  Krono.h  ReadMe.txt  stdafx.h
DeferredRendering/Collide/: BoundingBox.cpp  BoundingBox.h  Frustrum.cpp  Frustrum.h  Plane.cpp  Plane.h
DeferredRendering/Compositor/: CompositeStage.cpp  CompositeStage.h  Compositor.cpp  Compositor.h  DeferredCompositor.cpp  DeferredCompositor.h  LightingCompositeStage.cpp  LightingCompositeStage.h  LightingCompositeState.cpp  LightingCompositeState.h  RenderSceneCompositeStage.cpp  RenderSceneCompositeStage.h  RenderState.cpp  RenderState.h  RenderStateParameters.cpp  RenderStateParameters.h  RenderTargetConfiguration.cpp  RenderTargetConfiguration.h  RenderTargetDatabase.cpp  RenderTargetDatabase.h  ScreenQuadCompositeStage.cpp  ScreenQuadCompositeStage.h
DeferredRendering/Core/: Exception.cpp  Exception.h  Hash.cpp  Hash.h  Memory.h  Object.cpp  Object.h  Types.h
DeferredRendering/DX11/: DX11BlendState.cpp  DX11BlendState.h  DX11Common.h  DX11ConstantBuffer.cpp  DX11ConstantBuffer.h  DX11DataBuffer.cpp  DX11DataBuffer.h  DX11DepthBuffer.cpp  DX11DepthBuffer.h  DX11DepthState.cpp  DX11DepthState.h  DX11Graphics.cpp  DX11Graphics.h  DX11IndexBuffer.cpp  DX11IndexBuffer.h  DX11OffscreenRenderTarget.cpp  DX11OffscreenRenderTarget.h  DX11RasterizerState.cpp  DX11RasterizerState.h  DX11RenderTarget.cpp  DX11RenderTarget.h  DX11Sampler.cpp  DX11Sampler.h  DX11Shader.cpp  DX11Shader.h  DX11ShaderProgram.cpp  DX11ShaderProgram.h  DX11SmartPtr.h  DX11Texture2D.cpp  DX11Texture2D.h  DX11VertexBuffer.cpp  DX11VertexBuffer.h  DX11WindowRenderBuffer.cpp  DX11WindowRenderBuffer.h  DX11WindowRenderTarget.cpp  DX11WindowRenderTarget.h  HResultException.cpp  HResultException.h  IDX11Resource.cpp  IDX11Resource.h
DeferredRendering/Debug/: CL.read.1.tlog  CL.write.1.tlog  DX11Shader.h  DeferredRendering.lastbuildstate  DeferredRendering.write.1.tlog  FXC.command.1.tlog  cl.command.1.tlog  fxc.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
DeferredRendering/Input/: InputState.cpp  InputState.h
DeferredRendering/Interface/: BlendState.cpp  BlendState.h  Color.cpp  Color.h  ConstantBuffer.cpp  ConstantBuffer.h  DataBuffer.cpp  DataBuffer.h  DataFormat.cpp  DataFormat.h  DepthBuffer.cpp  DepthBuffer.h  DepthState.cpp  DepthState.h  Graphics.cpp  Graphics.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  InvalidEnumException.cpp  InvalidEnumException.h  MappedConstantBuffer.cpp  MappedConstantBuffer.h  RasterizerState.cpp  RasterizerState.h  RenderTarget.cpp  RenderTarget.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  ShaderInputLayout.cpp  ShaderInputLayout.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  (+6 more)
DeferredRendering/JSON/: json.cpp  json.h
DeferredRendering/Linux/: XLibWindow.cpp  XLibWindow.h
DeferredRendering/Math/: Angle.h  BoundingBox.cpp  BoundingBox.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  Plane.cpp  Plane.h  Quaternion.h  Range.cpp  Range.h  Rect.cpp  Rect.h  Vector2.h  Vector3.h  Vector4.h
DeferredRendering/OpenGL/: OpenGLBlendState.cpp  OpenGLBlendState.h  OpenGLCommon.h  OpenGLConstantBuffer.cpp  OpenGLConstantBuffer.h  OpenGLConstantBufferStorage.cpp  OpenGLConstantBufferStorage.h  OpenGLDataBuffer.cpp  OpenGLDataBuffer.h  OpenGLDepthBuffer.cpp  OpenGLDepthBuffer.h  OpenGLDepthState.cpp  OpenGLDepthState.h  OpenGLException.cpp  OpenGLException.h  OpenGLFBODatabase.cpp  OpenGLFBODatabase.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLGraphics.cpp  OpenGLGraphics.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLObjectID.cpp  OpenGLObjectID.h  OpenGLOffscreenRenderTarget.cpp  OpenGLOffscreenRenderTarget.h  OpenGLRasterizerState.cpp  OpenGLRasterizerState.h  OpenGLRenderTarget.cpp  (+22 more)
ShaderBundler/: CMakeLists.txt  CrossCompileTesting.glsl  CrossCompileTesting.hlsl  IncludeTest.hlsli  PreprocessInclude.txt  PreprocessTest.txt  ReadMe.txt  ShaderBundler.cpp  ShaderBundler.vcxproj  ShaderBundler.vcxproj.filters  Testing.hlsl  Testing.vert  testing.json  testing.shader
TowerDefense/: CMakeLists.txt  PixelShaderTest.cso  ReadMe.txt  Resource.h  Shader.dgsl  TestScene.json  TowerDefense.aps  TowerDefense.cpp  TowerDefense.rc  TowerDefense.vcxproj  TowerDefense.vcxproj.filters  stdafx.cpp
(+360 files in other folders)
